--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -145,17 +145,36 @@
             <section class="promo-section">
                 <div class="container">
                     <div class="promo-section_runline">
-                        <div class="runline runline1">
-                            <span>just do it</span>
-                            <img src="img/lable/nike.png" alt="">
-                        </div>
-                        <div class="runline runline2">
-                            <span>just do it</span>
-                            <img src="img/lable/nike.png" alt="">
+                        <div class="runline-wrapper">
+                            <div class="runline runline1">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                            </div>
+                            <div class="runline runline2">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                                <span>JUST DO IT</span>
+                                <img src="img/lable/nike.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="promo-section_photo">
                         <img src="img/decor/bg_image_section.jpg" alt="">
+                        <div class="filter-blur"></div>
                     </div>
                 </div>
             </section>
